--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
         <a href="https://www.tiktok.com/@404.rorr3">TikTok</a>
         <br>
         <br>
-        <a href="https://paolo2442.github.io/constructio-page-2-with-css/Construction.html">Payhip</a>
+        <a href="https://payhip.com/404RORR3">404.RORR3 SCENEPACKS</a>
     </div>
     <p>
         BY 404
